# STRM1

./: README.md  first document.txt  stormir next.txt
customasm/: helloworld.asm  infiniteloop.asm  rules.asm
deassembler/: Cargo.toml
deassembler/src/: main.rs
digital/: cpu.dig
emulator/: Cargo.toml
emulator/src/: alu.rs  command.rs  endian.rs  execute.rs  lib.rs  main.rs
libdeassembler/: Cargo.toml
libdeassembler/src/: lib.rs
libemulator/: Cargo.toml
libemulator/src/: execute.rs  lib.rs  regfile.rs  volatilehelper.rs
libisa/: Cargo.toml
libisa/src/: lib.rs
libstormir/: Cargo.toml  lir_ng.txt
libstormir/src/: lib.rs
libstormir/src/backend/strm1/: codegen.rs  machinecode.rs  mod.rs
libstormir/src/backend/strm1/codegen/: mod.rs  tests.rs
libstormir/src/backend/strm1/codegen/alloc/: mod.rs  tests.rs  usagemap.rs
libstormir/src/backend/strm1/codegen/alloc/allocation/: allocator.rs  mod.rs  tests.rs
libstormir/src/backend/strm1/codegen/alloc/varalloc/: allocator.rs  mod.rs  neumannpass.rs  tests.rs  usagemap.rs
libstormir/src/backend/strm1/codegen/alloc/varalloc/tests/: mod.rs  varalloctest.rs
libstormir/src/backend/strm1/codegen/prealloc/: codegen.rs  mod.rs  varidspace.rs
libstormir/src/backend/strm1/codegen/var/: builder.rs  mod.rs  tests.rs  usagemap.rs
libstormir/src/backend/strm1/tests/: emulated.rs  mod.rs
libstormir/src/lir/: mod.rs
libstormir/src/lir/shim/: cmp.rs
libstormir/src/transformer/: chain.rs  extra.rs  mod.rs  repeat.rs  runner.rs
libstrmisa/: Cargo.toml
stormir/: Cargo.toml  stormir next.txt
(+45 files in other folders)
