[package]
name = "libstormir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
indexmap = { version = "2.6", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

libisa = { path = "../libisa" }

[dev-dependencies]
lazy_static = "1.5"
itertools = "0.13"

libemulator = { path = "../libemulator" } # Used for testing backend codegen
