[package]
name = "libstormir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
itertools = "0.13"
lazy_static = "1.5"

serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"

libisa = { path = "../libisa" }
libdeassembler = { path = "../libdeassembler" }

[dev-dependencies]
libemulator = { path = "../libemulator" } # Used for testing backend codegen

[profile.test]
opt-level = 1 # Enable a little bit of optimization for test builds
